--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -36,6 +36,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="ZkS-4N-4gj"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="J2q-U5-he9" id="FJU-s8-jUp"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
