--- a/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
+++ b/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
@@ -120,7 +120,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qlD-y3-ZlQ" userLabel="Nick View">
-                    <rect key="frame" x="151" y="181" width="74" height="30"/>
+                    <rect key="frame" x="153" y="181" width="70" height="30"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昵称" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqx-5D-eyB">
                             <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
@@ -128,9 +128,13 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qcP-EE-K6u">
-                            <rect key="frame" x="44" y="0.0" width="30" height="30"/>
-                            <state key="normal" title="关注"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qcP-EE-K6u">
+                            <rect key="frame" x="40" y="0.0" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="d5d-oz-aX7"/>
+                                <constraint firstAttribute="width" secondItem="qcP-EE-K6u" secondAttribute="height" multiplier="1:1" id="pCX-Ln-eIG"/>
+                            </constraints>
+                            <state key="normal" image="PF-AttentionIcon"/>
                             <connections>
                                 <action selector="actionButtonPressed" destination="-1" eventType="touchUpInside" id="Bwj-vf-PrR"/>
                             </connections>
@@ -140,7 +144,7 @@
                     <constraints>
                         <constraint firstItem="uqx-5D-eyB" firstAttribute="top" secondItem="qlD-y3-ZlQ" secondAttribute="top" id="1Sq-aL-H6Y"/>
                         <constraint firstItem="qcP-EE-K6u" firstAttribute="top" secondItem="qlD-y3-ZlQ" secondAttribute="top" id="TYG-wo-yKS"/>
-                        <constraint firstItem="qcP-EE-K6u" firstAttribute="leading" secondItem="uqx-5D-eyB" secondAttribute="trailing" constant="4" id="W7N-Pn-bms"/>
+                        <constraint firstItem="qcP-EE-K6u" firstAttribute="leading" secondItem="uqx-5D-eyB" secondAttribute="trailing" id="W7N-Pn-bms"/>
                         <constraint firstAttribute="bottom" secondItem="qcP-EE-K6u" secondAttribute="bottom" id="X2c-RZ-Lkh"/>
                         <constraint firstAttribute="bottom" secondItem="uqx-5D-eyB" secondAttribute="bottom" id="ezd-Y8-ba2"/>
                         <constraint firstItem="uqx-5D-eyB" firstAttribute="leading" secondItem="qlD-y3-ZlQ" secondAttribute="leading" id="rks-nc-9lM"/>
@@ -242,4 +246,7 @@
             </connections>
         </tapGestureRecognizer>
     </objects>
+    <resources>
+        <image name="PF-AttentionIcon" width="20" height="20"/>
+    </resources>
 </document>
