--- a/mia/Views/Profile/NavigationBar/HXProfileNavigationBar.xib
+++ b/mia/Views/Profile/NavigationBar/HXProfileNavigationBar.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
@@ -9,7 +10,6 @@
                 <outlet property="backButton" destination="EDM-DY-yeI" id="U0R-bL-F3w"/>
                 <outlet property="backgroundView" destination="uos-yF-YdI" id="Tfb-Ue-mMi"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="Cfh-c2-gAM"/>
-                <outlet property="musicButton" destination="bkl-J8-i9o" id="cLR-IG-eNh"/>
                 <outlet property="titleLabel" destination="elw-aF-JWl" id="f9a-gD-8a4"/>
             </connections>
         </placeholder>
@@ -60,27 +60,14 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bkl-J8-i9o">
-                            <rect key="frame" x="260" y="0.0" width="60" height="44"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="60" id="p3J-YJ-Hgj"/>
-                            </constraints>
-                            <state key="normal" image="PF-PlayIcon"/>
-                            <connections>
-                                <action selector="musicButtonPressed" destination="-1" eventType="touchUpInside" id="eZy-J3-ABD"/>
-                            </connections>
-                        </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="bkl-J8-i9o" firstAttribute="top" secondItem="Fd4-HS-c5h" secondAttribute="top" id="8Vd-cC-9cQ"/>
                         <constraint firstItem="EDM-DY-yeI" firstAttribute="top" secondItem="Fd4-HS-c5h" secondAttribute="top" id="AfA-hU-oKC"/>
-                        <constraint firstAttribute="bottom" secondItem="bkl-J8-i9o" secondAttribute="bottom" id="BuK-7i-PV5"/>
                         <constraint firstAttribute="bottom" secondItem="EDM-DY-yeI" secondAttribute="bottom" id="Rnf-Di-06y"/>
                         <constraint firstItem="EDM-DY-yeI" firstAttribute="leading" secondItem="Fd4-HS-c5h" secondAttribute="leading" id="enu-CX-bKm"/>
                         <constraint firstItem="elw-aF-JWl" firstAttribute="centerX" secondItem="Fd4-HS-c5h" secondAttribute="centerX" id="ihl-Iv-E5V"/>
                         <constraint firstAttribute="height" constant="44" id="o8p-ip-lZN"/>
-                        <constraint firstAttribute="trailing" secondItem="bkl-J8-i9o" secondAttribute="trailing" id="tAo-wz-bWX"/>
                         <constraint firstItem="elw-aF-JWl" firstAttribute="centerY" secondItem="Fd4-HS-c5h" secondAttribute="centerY" id="uIz-N5-MbO"/>
                     </constraints>
                 </view>
@@ -101,6 +88,5 @@
     </objects>
     <resources>
         <image name="C-BackIcon-White" width="25" height="25"/>
-        <image name="PF-PlayIcon" width="25" height="25"/>
     </resources>
 </document>
