--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -190,7 +190,7 @@
                                                                 <constraint firstItem="xVD-2g-1IU" firstAttribute="leading" secondItem="Wvw-MT-H97" secondAttribute="leading" id="p6D-LX-xh6"/>
                                                             </constraints>
                                                         </view>
-                                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uAf-lM-nYa">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uAf-lM-nYa">
                                                             <rect key="frame" x="33" y="33" width="35" height="35"/>
                                                             <state key="normal" image="M-PlayIcon"/>
                                                             <connections>
@@ -212,7 +212,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xm4-bL-pTE">
-                                                    <rect key="frame" x="185" y="172" width="40" height="40"/>
+                                                    <rect key="frame" x="219" y="172" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="hcw-XV-V6L"/>
                                                         <constraint firstAttribute="width" constant="40" id="sOj-36-MNj"/>
@@ -223,7 +223,7 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M1g-uG-kgN">
-                                                    <rect key="frame" x="229" y="182" width="31" height="20"/>
+                                                    <rect key="frame" x="263" y="182" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PF-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="nNN-ao-YqG">
                                                             <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -246,17 +246,6 @@
                                                         <constraint firstAttribute="bottom" secondItem="RRE-eK-ITr" secondAttribute="bottom" id="tPN-ov-MJR"/>
                                                     </constraints>
                                                 </view>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GCj-Rv-su9">
-                                                    <rect key="frame" x="264" y="172" width="40" height="40"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="hyh-ca-kzr"/>
-                                                        <constraint firstAttribute="width" constant="40" id="iWh-jh-b5h"/>
-                                                    </constraints>
-                                                    <state key="normal" image="PF-DeleteIcon"/>
-                                                    <connections>
-                                                        <action selector="deleteButtonPressed" destination="h7b-s1-DXZ" eventType="touchUpInside" id="NW6-Jg-HpR"/>
-                                                    </connections>
-                                                </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2015-12-12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l8T-ZC-vro">
                                                     <rect key="frame" x="10" y="183" width="75" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -267,22 +256,19 @@
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="Brc-9e-1li" firstAttribute="trailing" secondItem="OSc-wG-GHP" secondAttribute="trailing" id="7uB-Ok-aki"/>
-                                                <constraint firstAttribute="trailing" secondItem="GCj-Rv-su9" secondAttribute="trailing" id="9cu-Mv-tpX"/>
                                                 <constraint firstItem="M1g-uG-kgN" firstAttribute="centerY" secondItem="Xm4-bL-pTE" secondAttribute="centerY" id="ABN-LP-uaG"/>
                                                 <constraint firstAttribute="trailing" secondItem="VZc-kF-vNu" secondAttribute="trailing" constant="10" id="BUt-Yy-7Yt"/>
                                                 <constraint firstItem="Xm4-bL-pTE" firstAttribute="top" secondItem="Brc-9e-1li" secondAttribute="bottom" id="BhK-9b-uuB"/>
-                                                <constraint firstAttribute="bottom" secondItem="GCj-Rv-su9" secondAttribute="bottom" id="CSm-bd-T7R"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="trailing" secondItem="VZc-kF-vNu" secondAttribute="trailing" id="FfX-3i-4LQ"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="top" secondItem="VZc-kF-vNu" secondAttribute="bottom" constant="4" id="GfG-we-NT7"/>
+                                                <constraint firstItem="M1g-uG-kgN" firstAttribute="trailing" secondItem="Brc-9e-1li" secondAttribute="trailing" id="Psn-96-4Th"/>
                                                 <constraint firstItem="Brc-9e-1li" firstAttribute="top" secondItem="OSc-wG-GHP" secondAttribute="bottom" constant="6" id="Pt0-kB-axt"/>
                                                 <constraint firstItem="VZc-kF-vNu" firstAttribute="top" secondItem="Qe8-TQ-eDn" secondAttribute="top" constant="12" id="SXl-Me-q03"/>
                                                 <constraint firstItem="VZc-kF-vNu" firstAttribute="leading" secondItem="Qe8-TQ-eDn" secondAttribute="leading" constant="10" id="ThC-sU-0e0"/>
-                                                <constraint firstItem="GCj-Rv-su9" firstAttribute="leading" secondItem="M1g-uG-kgN" secondAttribute="trailing" constant="4" id="YLI-ld-ite"/>
                                                 <constraint firstItem="Brc-9e-1li" firstAttribute="leading" secondItem="OSc-wG-GHP" secondAttribute="leading" id="cjS-OC-SPm"/>
                                                 <constraint firstItem="M1g-uG-kgN" firstAttribute="leading" secondItem="Xm4-bL-pTE" secondAttribute="trailing" constant="4" id="fO8-EF-4OZ"/>
                                                 <constraint firstAttribute="bottom" secondItem="Xm4-bL-pTE" secondAttribute="bottom" id="kPQ-gq-wc4"/>
                                                 <constraint firstItem="l8T-ZC-vro" firstAttribute="leading" secondItem="Brc-9e-1li" secondAttribute="leading" id="rFU-wP-xjM"/>
-                                                <constraint firstItem="GCj-Rv-su9" firstAttribute="top" secondItem="Brc-9e-1li" secondAttribute="bottom" id="rxP-1d-RUX"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="leading" secondItem="VZc-kF-vNu" secondAttribute="leading" id="tc0-PO-1LJ"/>
                                                 <constraint firstItem="l8T-ZC-vro" firstAttribute="centerY" secondItem="Xm4-bL-pTE" secondAttribute="centerY" id="ycw-LA-Tgr"/>
                                             </constraints>
@@ -300,7 +286,6 @@
                                     <outlet property="commentCountLabel" destination="RRE-eK-ITr" id="OsV-7J-9WK"/>
                                     <outlet property="cover" destination="5Az-Ky-gZ6" id="RRc-vs-kBS"/>
                                     <outlet property="delegate" destination="Qc6-9f-kPc" id="TCw-cc-LSf"/>
-                                    <outlet property="deleteButton" destination="GCj-Rv-su9" id="HUh-g4-Dal"/>
                                     <outlet property="descriptionLabel" destination="OSc-wG-GHP" id="Sop-WX-ncO"/>
                                     <outlet property="favoriteButton" destination="Xm4-bL-pTE" id="sTt-VW-ukR"/>
                                     <outlet property="playButton" destination="uAf-lM-nYa" id="bZG-bm-H5f"/>
@@ -379,7 +364,6 @@
     <resources>
         <image name="M-PlayIcon" width="35" height="35"/>
         <image name="PF-CommentIcon" width="20" height="20"/>
-        <image name="PF-DeleteIcon" width="20" height="20"/>
         <image name="PF-FavoriteIcon" width="20" height="20"/>
     </resources>
 </document>
