--- a/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
+++ b/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
@@ -10,6 +10,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXProfileDetailHeader">
             <connections>
                 <outlet property="actionButton" destination="qcP-EE-K6u" id="Qcb-lR-D93"/>
+                <outlet property="actionButtonWidthConstraint" destination="d5d-oz-aX7" id="q5i-C9-K4D"/>
                 <outlet property="avatar" destination="R0N-UP-ARd" id="HPx-ia-hlA"/>
                 <outlet property="containerView" destination="XzQ-mD-mKd" id="WNH-fX-9WO"/>
                 <outlet property="fansCountLabel" destination="Yxm-YX-RAQ" id="cKN-wh-SwK"/>
@@ -138,7 +139,7 @@
                             <rect key="frame" x="40" y="0.0" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="d5d-oz-aX7"/>
-                                <constraint firstAttribute="width" secondItem="qcP-EE-K6u" secondAttribute="height" multiplier="1:1" id="pCX-Ln-eIG"/>
+                                <constraint firstAttribute="height" constant="30" id="p5f-4S-gye"/>
                             </constraints>
                             <state key="normal" image="PF-AttentionIcon"/>
                             <connections>
